All the files needed to make the site more responsive and to resolve UI issues. Fixed the side bar menu to open on smaller screens and not duplicate nav bar items. Replaced the dropdown menu to fix conflicting code. Fixed main front page to show the login button on smaller screens.

--- a/public/light-bootstrap/css/demo.css
+++ b/public/light-bootstrap/css/demo.css
@@ -2,15 +2,15 @@
 .box-of-links {
     background-color: rgba(55,55,55,0.6); 
     border-radius: 8px;
-    padding: 20px 50px;
+    padding: 20px;
     border: 1px solid;
     box-shadow: 0 0 10px #fff;  
-    width: 60%;
+    width: 80%;
+    max-width: 100%;
     margin: 0 auto;
 }
 .box-item {
     color: #888;
-    border-bottom: 1px solid #888;
 }
 .box-item a {
     transition: .55s;
@@ -323,6 +323,7 @@
     top: 27px;
     opacity: 0;
     transform-origin: 0 0;
+
 }
 
 .fixed-plugin .dropdown.show .dropdown-menu {
@@ -333,6 +334,7 @@
     -ms-transform: translateY(-13%);
     transform: translateY(-13%);
     transform-origin: 0 0;
+
 }
 
 .fixed-plugin .dropdown-menu:before,
@@ -375,6 +377,7 @@
     -o-transform: translateY(-19%);
     -ms-transform: translateY(-19%);
     transform: translateY(-19%);
+    
 }
 
 .places-buttons .btn {
@@ -590,24 +593,13 @@
         height: 100%;
         width: auto;
     }
+    .container-fluid {
+        z-index: 1;
+    }
+   
+  
 }
 
-/*.separator{
-    content: "Separator";
-    color: #FFFFFF;
-    display: block;
-    width: 100%;
-    padding: 20px;
-}
-.separator-line{
-    background-color: #EEE;
-    height: 1px;
-    width: 100%;
-    display: block;
-}
-.separator.separator-gray{
-    background-color: #EEEEEE;
-}*/
 
 .social-buttons-demo .btn {
     margin-right: 5px;
@@ -717,6 +709,10 @@
 
 .navbar-default.navbar-small .logo-container .brand {
     color: #333333;
+}
+.dropCustom {
+    z-index: 99;
+    position: absolute;  
 }
 
 .sharing-area {
@@ -847,6 +843,7 @@
 
 .documentation .dropdown .dropdown-menu {
     transform: translate3d(0, 0, 0) !important;
+    z-index: 9999;
 }
 
 .documentation .dropdown .dropdown-menu.show {
